# AlgorithmicPuzzleContest

./: LICENSE  README.md
2016/: README.md
2016/qualification/jamcoin/: CMakeLists.txt
2016/qualification/sheep/: CMakeLists.txt  main.cpp
2016/round-1A/: README.md  main-a.cpp
2016/round-1B/: CMakeLists.txt  README.md  b.sh  main-a.cpp  main-b.cpp  main-c.cpp
2016/round-1B/data/: A-large.out  B-large-practice.out  B-small-attempt0.in  B-small-attempt0.out  B-small-attempt1.in  B-small-attempt1.out  B-small-attempt2.in  B-small-attempt2.out
2016/round-1C/: CMakeLists.txt  main-a.cpp  main-c.cpp
2016/round-1C/data/: A-large.out  A-small-attempt0.out
2017/: README.md
2017/qualification/: C-thinking.ods  CMakeLists.txt  README.md  a.cpp  b.cpp  c.cpp  d.cpp  run.sh
2017/qualification/data/: A-small-attempt0.in  A-small-attempt0.out  B-small-attempt0.in  C-large-practice.out  C-small-1-attempt0.out  C-small-1-attempt1.in  C-small-1-attempt1.out  C-small-1-attempt2.in  C-small-1-attempt2.out  C-small-practice-1.out  C-small-practice-2.out
jamcoin/: C-large.out
pancakes/: C-small-attempt0.in  C-small-attempt0.out  CMakeLists.txt  test.in
qualification/jamcoin/: A-small-attempt0.out  README.md  main.cpp  test-all.in
qualification/pancakes/: README.md  main.cpp  main.cpp.too_complicated
qualification/sheep/: README.md
round-1A/: CMakeLists.txt  README.md  main-b.cpp
sheep/: C-small-attempt0.in  C-small-attempt0.out  main.cpp
